Achevement et amélioration du CRUD. Mise au point des endpoints